--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wordify",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Aerobird98.github.io/wordify",
   "dependencies": {
     "draft-js": "^0.11.4",
     "react": "^16.13.0",
@@ -11,6 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -27,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
