--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordify",
+  "name": "flow",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://Aerobird98.github.io/wordify",
