--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "flow",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "private": true,
   "homepage": "http://Aerobird98.github.io/flow",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
