--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "homepage": "http://Aerobird98.github.io/flow",
   "dependencies": {
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.0",
     "slate": "^0.57.1",
