--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "private": true,
   "homepage": "http://Aerobird98.github.io/flow",
   "dependencies": {
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "develop": "npm run start",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
     "release": "npm run build && npm run deploy"
