--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "private": true,
   "homepage": "http://Aerobird98.github.io/flow",
   "dependencies": {
@@ -8,38 +8,23 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.4.1",
-    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0",
     "slate": "^0.57.1",
     "slate-history": "^0.57.1",
     "slate-react": "^0.57.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "develop": "npm run start",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d build",
+    "start": "npm run dev",
+    "dev": "parcel serve index.html --port 3000 --out-dir dev",
+    "build": "parcel build index.html --out-dir dist",
+    "deploy": "gh-pages -d dist",
     "release": "npm run build && npm run deploy"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.3"
   }
 }
