--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "preact": "^10.3.4",
     "slate": "^0.57.1",
     "slate-history": "^0.57.1",
-    "slate-react": "^0.57.1"
+    "slate-react": "^0.57.1",
+    "typeface-quicksand": "^1.1.4"
   },
   "alias": {
     "react": "preact/compat",
