--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flow",
-  "version": "0.10.1",
+  "version": "0.10.2",
   "description": "A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities.",
   "private": true,
   "scripts": {
@@ -37,10 +37,9 @@
     "react-dom": "preact/compat"
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "parcel": "^2.0.0-nightly.278",
+    "gh-pages": "^3.0.0",
+    "parcel": "^2.0.0-nightly.287",
     "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
-    "sass": "^1.26.7"
+    "rimraf": "^3.0.2"
   }
 }
