--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities.",
   "private": true,
   "scripts": {
-    "start": "npm run build-development",
-    "build-development": "esbuild index.js --bundle --outdir=dist --loader:.js=jsx '--define:process.env.NODE_ENV=\"development\"' --jsx-factory=h --jsx-fragment=Fragment",
-    "build-production": "esbuild index.js --bundle --minify --outdir=dist --loader:.js=jsx '--define:process.env.NODE_ENV=\"production\"' --jsx-factory=h --jsx-fragment=Fragment --sourcemap",
-    "release": "npm run build-production && gh-pages -d dist"
+    "build-development": "esbuild index.js --bundle --outdir=dist --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='development'",
+    "build-production": "esbuild index.js --bundle --outdir=dist --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='production'",
+    "deploy": "gh-pages -d dist",
+    "release": "npm run build-production && npm run deploy"
   },
   "repository": {
     "type": "git",
