--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flow",
-  "version": "0.11.1",
+  "version": "0.11.5",
   "description": "A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities.",
   "private": true,
   "scripts": {
-    "build-development": "esbuild index.js --bundle --outdir=dist --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='development'",
-    "build-production": "esbuild index.js --bundle --outdir=dist --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='production'",
+    "build-development": "esbuild index.js --bundle --outdir=build --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"development\"'",
+    "build-production": "esbuild index.js --bundle --outdir=build --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"production\"'",
     "deploy": "gh-pages -d dist",
     "release": "npm run build-production && npm run deploy"
   },
