--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build-development": "esbuild index.js --bundle --outdir=build --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"development\"'",
     "build-production": "esbuild index.js --bundle --outdir=build --loader:.js=jsx --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"production\"'",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "release": "npm run build-production && npm run deploy"
   },
   "repository": {
