--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A compact web based rich-text editor that builds on top of Slate-js with powerful, yet simple and accessible editing capabilities.",
   "private": true,
   "scripts": {
-    "build-development": "esbuild index.js --bundle --outdir=build --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"development\"'",
-    "build-production": "esbuild index.js --bundle --outdir=build --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"production\"'",
+    "build-development": "esbuild index.jsx --bundle --outdir=build --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"development\"'",
+    "build-production": "esbuild index.jsx --bundle --outdir=build --jsx-factory=h --jsx-fragment=Fragment --minify --sourcemap --define:process.env.NODE_ENV='\"production\"'",
     "deploy": "gh-pages -d build",
     "release": "npm run build-production && npm run deploy"
   },
